--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "next build && next export",
+    "start": "next start",
+    "server": "json-server -p 3333 -d 1000  --watch server.json",
+    "deploy": "aws s3 sync out/ s3://move-money-next --acl public-read"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "json-server": "^0.16.3",
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^0.5.5"
   }
 }
